# pdf-ocr-audit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
scripts/: __init__.py  extract_changelog.py
src/pdf_ocr_audit/: __init__.py  audit.py  cli.py  deep_scan.py  models.py  reporting.py  text_utils.py
tests/: __init__.py  helpers.py  test_audit.py  test_cli.py  test_deep_scan.py  test_quality.py  test_release_notes.py
