[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "pdf-ocr-audit"
version = "0.1.0"
description = "Audit PDFs page-by-page to confirm extractable OCR text is present."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MarshallTech81" },
]
dependencies = [
  "pymupdf>=1.26.0",
  "pypdf>=5.4.0",
]

[project.scripts]
pdf-ocr-audit = "pdf_ocr_audit.cli:main"

[project.urls]
Homepage = "https://github.com/marshalltech81/pdf-ocr-audit"
Issues = "https://github.com/marshalltech81/pdf-ocr-audit/issues"

[dependency-groups]
dev = [
  "bandit[toml]>=1.9.4",
  "pip-audit>=2.8.0",
  "pyright>=1.1.400",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.5",
]

[tool.pytest.ini_options]
addopts = "-q --cov=pdf_ocr_audit --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.coverage.run]
branch = true
source = ["pdf_ocr_audit"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["src"]
